--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Devtool Configurator</title>
+    <title>@43081j's Configurator</title>
     <style>
       body {
         margin: 0;
